OPEN - task 3: Fixe FindBugs Issues http://github.com/doublefx/spring-flex-roo/issues/issue/3